--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.container{
+    height: 100vh;
+    width: 100vw;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(240deg,rgba(17, 20, 198, 0.97),rgb(18, 16, 17));
+}
+.register{
+    background: white;
+    max-width: 500px;
+    height: 400px;
+    border-radius: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2{
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: blue;
+    margin: 50px;
+    margin-top: 50px;
+}
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+form input{
+    max-width: 400px;
+    min-width: 300px;
+    margin: auto;
+    padding: 10px;
+    margin-top: 2px;
+    border-radius: 10px;
+    outline: none;
+    background: none;
+
+}
+form button{
+    width: 100px;
+    margin-left: 40px;
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    color: white;
+    background: blue;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.haveAccount{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.haveAccount button{
+     background: none;
+     border: none;
+     color: blue;
+     text-decoration: underline;
+     
+}
+
+/*  login*/
+
+.login{
+    background: white;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.errorPass{
+    font-size: 12px;
+    color: red;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    animation-name: errorPass;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+}
+@keyframes errorPass{
+    0%{
+        transform: translate(-5px);
+
+    }
+    20%{
+        transform: translate(0px);
+
+    }
+    40%{
+        transform: translate(-5px);
+
+    }
+    60%{
+        transform: translate(0px);
+
+    }
+    80%{
+        transform: translate(-5px);
+
+    }
+    100%{
+        transform: translate(0px);
+
+    }
 }
